2000-11-22  Richard Braakman  <dark@wapi.com>

	* gwlib/fdset.c: When destroying an fdset with active fd's,
	close them first and signal that event.

2000-11-22  Lars Wirzenius  <liw@iki.fi>

	* doc/userguide/userguide.xml: Add notes about HTTP proxy username
	and password.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* wmlscript/wserror.c, wmlscript/wslexer.c:
        Fixed some assertions with side effects.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* gw/html.c, convert_html_entity(): Made conversion of entities
	like &#1234; work.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* gw/html.c, gw/msg.c: Reformatted.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* gw/cgi.[ch]: Removed, they are no longer used.

	* gw/smsbox.c, gw/smsbox_req.[ch]: Removed inclusion of cgi.h.

2000-11-21  Richard Braakman  <dark@wapi.com>

	* gwlib/gwthread-pthread.c, gwlib/conn.c, gwlib/list.c,
	gwlib/utils.c (roundup_div): Formatted according to our coding style.
	All of gwlib/ is now converted.

2000-11-21  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.c: Made persistent connection detection work with
	HTTP/1.0 responses and responses with the "Connection: close"
	header. Also removed an extra "Using proxy" report.

	* ChangeLog: Indented the first line of the previous log entry
	properly. (8, not 4)

2000-11-21  Yann Muller  <ymuller@3glab.com>

	* gwlib/utils.[ch], gw/smsbox_req.c: moved roundup_div() from
	smsbox_req.c to utils.c so it can be used from other files.
	
	* gw/smsc_at.c: fix for 7 bit encoded PDU's with a UDH.
	
	* gw/smsbox_req.c: maxdatalength fix in do_split_send().
	
2000-11-21  Lars Wirzenius  <liw@iki.fi>

	* checsk/check_fakesmsc.sh: Sleep before starting background
	processes, so that the previous ones have time to start up
	properly.

	* ChangeLog: Indented the previous log entry properly. (8, not 4)

2000-11-21  Yann Muller  <ymuller@3glab.com>

	* gw/smsbox_req.c: sendota patched (Stipe Tolj) to accept more 
	that one OTA configuration. 
	